Upload file 1 file

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -43,3 +43,16 @@ body {
   .btn-submit{
     cursor: pointer;
   }
+.upload-file-container {
+  padding: 15px;
+}
+
+.upload-file-container {
+  display: block;
+}
+
+
+.btn-save{
+  margin-top: 15px;
+  cursor: pointer;
+}
