Upload file nhieu file

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,9 +37,9 @@
                 <td><%= dataUser[i].firstName %></td>
                 <td><%= dataUser[i].lastName %></td>
                 <td>
-                    <a href="detail/user/<%= dataUser[i].id %>">Detail</a>
-                    <a href="edituser/<%= dataUser[i].id %>">Edit</a>
-                    <a href="deleteUser/<%= dataUser[i].id %>">Delete</a>
+                    <a href="detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a>
+                    <a href="edituser/<%= dataUser[i].id %>" target="_blank">Edit</a>
+                    <a href="deleteUser/<%= dataUser[i].id %>" target="_blank">Delete</a>
                 </td>
             </tr>
         <% } %>
