--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -17,7 +17,6 @@
     
     <div style="padding-left:16px">
         <h2>List user</h2>
-        <%= dataUser.length %>
     </div>
 
     
@@ -25,28 +24,28 @@
     <thead>
         <tr>
             <th>#</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Action</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
-        <% for( let i=0; i < dataUser.length; i++ ) { %>
+        <% for( let i=0; i < data.length; i++ ) { %>
             <tr>
-                <td><%= dataUser[i].id %></td>
-                <td><%= dataUser[i].firstName %></td>
-                <td><%= dataUser[i].lastName %></td>
+                <td><%= data[i].id %></td>
+                <td><%= data[i].firstName %></td>
+                <td><%= data[i].lastName %></td>
                 <td>
-                    <a href="detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a>
-                    <a href="edituser/<%= dataUser[i].id %>" target="_blank">Edit</a>
-                    <a href="deleteUser/<%= dataUser[i].id %>" target="_blank">Delete</a>
+                    <a href="detail/user/<%= data[i].id %>" target="_blank">Detail</a>
+                    <a href="edituser/<%= data[i].id %>" target="_blank">Edit</a>
+                    <a href="deleteUser/<%= data[i].id %>" target="_blank">Delete</a>
                 </td>
             </tr>
         <% } %>
     </tbody>
   </table>
   <div>
-    <div><b>Create a new user:</b></div>
+    <!-- <div><b>Create a new user:</b></div>
     <form action="/createNewUser" method="POST">
         <div>
             <label for="">First name:</label>
@@ -68,7 +67,7 @@
             <button type="submit" class="btn-submit">Submit</button>
         </div>
     </form>
-  </div>
+  </div> -->
 </body>
 
 </html>
