viet api crud user va hien thi ra reactjs

--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -46,7 +46,7 @@
                     <td><%= data[i].lastName %></td>
                     <td>
                         <!-- <a href="detail/user?<%= data[i].id %>" target="_blank">Detail</a> -->
-                        <a href="editCRUD?id=<%= data[i].id %>" target="_blank">Edit</a>
+                        <a href="editCRUD?id=<%= data[i].id %>">Edit</a>
                         <a href="deleteCRUD?id=<%= data[i].id %>">Delete</a>
                     </td>
                 </tr>
